feat: MCP传输层支持StreamableHttp